overflow fix got rain

--- a/styles/_rain.scss
+++ b/styles/_rain.scss
@@ -6,7 +6,7 @@
     left: 0;
     z-index: 0;
     pointer-events: none;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .rays {
